# langGraph-basic

./: 1.ipynb  10_tiemTravel.ipynb  2_agent.ipynb  3_agent2.ipynb  4_promptChaing.ipynb  5_parallelization.ipynb  6_routing.ipynb  7_evaluatorOptimizer.ipynb  8_orchestrator-worker.ipynb  9_checkPointer.ipynb  pyproject.toml
